--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                             <div class="letter-title">🌚 致——唐欣 🌚</div>
                             <div class="letter-text">
 <div style="font-family:'KaiTi','楷体',serif; font-size:20px; color:#4a2b18; line-height:1.9; white-space:pre-wrap;">
-亲爱的阿欣:<br>
+亲愛的阿欣:<br>
 <br>
 嗨～又是一年10月21日了，今天，是屬於妳的特別日子。<br>
 先跟妳說聲最重要的：生日快樂🎂！<br> 
@@ -741,13 +741,13 @@
 是那種真正內心溫柔的人，才會有的堅強。<br>
 <br>
 我真的很希望，<br>
-妳不要再那麼委屈自己了。<br>
+妳不要再那麼委屈自己。<br>
 妳已經夠好了，真的。<br>
 妳做得比大多數人都還要努力，還要認真。<br>
 妳總是顧慮別人的感受，<br>
 為了不讓別人失望，<br>
 常常犧牲自己。<br>
-可是阿欣，妳也是人啊，<br>
+可是阿欣，妳也是個小孩啊，<br>
 妳也會累、會痛、會想哭。<br>
 所以，以後請妳也多為自己想一點，好嗎？<br>
 妳也值得被照顧、被疼愛、被溫柔以待。<br>
@@ -765,7 +765,7 @@
 或者我們什麼都不說，<br>
 就這樣並肩走著，也很好。<br> 
 <br>
-但現在，我只能隔著一片海，<br>
+但現在，我只能在千里之外，<br>
 透過這封信，把這些畫面寫給妳看。<br>
 嘻嘻，<br>
 雖然距離遠了一點，<br>
@@ -858,7 +858,7 @@
 祝我最親愛的阿欣，生日快樂。<br>
 <br>
 邱子怡<br>
-2025年12月10日<br>
+二〇二五年 十二月 十日<br>
 </div>
                             <div class="letter-text">
                                 🌸 願你的生日充滿歡笑與幸福,願你實現每一個夢想! 🌸
@@ -870,7 +870,7 @@
                                 🎀 長按 L 有驚喜哦!🎂✨
                             </div>
                             <div class="signature">
-                                💖 愛你的子怡<br>🌹 2025年12月10日 🌹
+                                💖 愛你的子怡<br>🌹 2025.12.10 🌹
                             </div>
                         </div>
                     </div>
@@ -1356,3 +1356,4 @@
     </script>
 </body>
 </html>
+
